----------------------
phpMyAdmin - Changelog
----------------------

$Id$
$Source$

2004-02-13 Alexander M. Turek  <resist@derrabus.de>
    * libraries/common.lib.php: Fixed bug #890186 (PMA chokes on undefined
      parser functions if one of the very first queries fails.
    * server_databases.php: Removed forgotten calls to mysql_wrappers.lib.

2004-02-11 Marc Delisle  <lem9@users.sourceforge.net>
    * server_privileges.php: bug 818654, password not copied
    * read_dump.php, libraries/display_tbl.lib.php, /bookmark.lib.php:
      bug 879005: execute stored bookmarks when user is different

2004-02-08 Marc Delisle  <lem9@users.sourceforge.net>
    * lang/spanish: Updated, thanks to Daniel Hinostroza (hinostroza).
    * lang/norwegian:  Updated, thanks to Sven-Erik Andersen (sven-erik).
    * lang/serbian: Updated, thanks to Mihailo Stefanovic (mikis).
    * lang/dutch update, thanks to Ivo Teel
    * lang/catalan: Updated, thanks to Xavier Navarro (xavin)
    * lang/estonian: Updated, thanks to Alvar Soome (finsoft).

2004-02-05 Alexander M. Turek  <chaos@derrabus.de>
    * Documentation.html: Added FAQ 1.17a about error message, "Client does not
      support authentication protocol".

2004-02-04 Marc Delisle  <lem9@users.sourceforge.net>
    * libraries/sqlparser.lib.php: bug 890573 (was a typo)

2004-02-03 Marc Delisle  <lem9@users.sourceforge.net>
    * tbl_change.php: bug 879923, NULL default value of DATETIME field

2004-02-02 Marc Delisle  <lem9@users.sourceforge.net>
    * export.php: security fix, thanks to Cedric Cochin for the advisory
    * lang/slovak: Updated, thanks to Lubos Klokner (erkac).

2004-02-02 Alexander M. Turek  <supposedformerinfatuationjunkie@derrabus.de>
    * libraries/mysql_charsets.lib.php: Use PMA_backquote().

2004-01-31 Michal Cihar  <whyisitsocold@cihar.com>
    * lang/czech: Update.

2004-01-23 Alexander M. Turek  <stormfront@derrabus.de>
    * lang/german-*.inc.php: Updates.
